@@ -1,5 +1,8 @@
 2010-03-24  Glenn Morris  <rgm@gnu.org>
 
+	* vc-bzr.el (vc-bzr-log-edit-mode): Add --fixes support to
+	log-edit-before-checkin-process.
+
 	* vc.el (vc-modify-change-comment): Pass MODE to vc-start-logentry.
 
 	* vc.el, vc-bzr.el, vc-hg.el (log-edit-mode): Declare.
